# SNU-library-scholarly-access-skill

./: .env.example  LICENSE  README.md  pyproject.toml  skill.md
src/scholarly_access_agent/: __init__.py  cli.py
src/scholarly_access_agent/core/: __init__.py  urls.py
src/scholarly_access_agent/data/: journal_domains.json
src/scholarly_access_agent/mcp/: __init__.py  server.py
src/scholarly_access_agent/providers/: __init__.py
src/scholarly_access_agent/providers/snu/: __init__.py  domains.py  login.py  proxy.py
src/scholarly_access_agent/runtime/: __init__.py  browser.py  pdf.py
